--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/qdbzyr225/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qdbzyr225/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11794062.md#1" target="_blank">疑武汉隐瞒疫情 港媒实地探访遭扣查</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11794062.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/0f87f76302b69b5d8cec069b430257fd-150x120.jpg" align ="left"></a>因质疑武汉隐瞒疫情，多家港媒记者前往武汉进行实地探访。患者所在的医院大楼守卫森严，所有记者都被公安扣查，拍摄视频被要求删除。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 12:35 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11793944.md#1" target="_blank">疫情恐扩散 武汉各大医院最高防疫级别戒备</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11793944.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_HKG2003122958048-600x400-2-150x120.jpg" align ="left"></a>世界卫生组织（WHO）日前警告，武汉新型冠状病毒肺炎疫情有可能扩大蔓延。港媒报导，当地各大小医院已提高到最高防疫级别戒备，前线医护人员更是穿着连体防护服。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 11:29 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11793955.md#1" target="_blank">武汉肺炎疑现人传人 夫妻先后发病</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11793955.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/pneumonia-010220-150x120.jpg" align ="left"></a>武汉市卫生健康委员会今日（15日）凌晨发稿称，在确诊的41宗病例中，发现一宗为“家庭聚集性”，丈夫先发病，然后是妻子，丈夫为华南海鲜批发市场从业人员，但妻子否认曾到过该海鲜市场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 11:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/13/n11790802.md#1" target="_blank">中共外交部胡言乱语实录</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/13/n11790802.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/19-07-044.31-150x120.jpg" align ="left"></a>近日，中共中纪委国监委网站公布中央巡视组对外交部、司法部等37家机构巡视回馈情况。其中中共外交部被点名存在多种问题，如“服务大局不够，选人用人视野不宽”等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 10:49 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/12/n11788549.md#1" target="_blank">田蕊妮不再续约无线 杜汶泽笑言：替TVB难过</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/12/n11788549.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/171203073058100311-150x120.jpg" align ="left"></a>从香港亚视出道的港星田蕊妮（阿田），2006年底加入无线，因主演不少剧集成为当家花旦，并夺得视后。去年8月，她在facebook（fb）嘲讽一直拒绝回应民众诉求的特首林郑月娥，引发大陆五毛扬言抵制她的新剧《她她她的少女时代》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 10:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11793810.md#1" target="_blank">蓬佩奥：美国恢复威慑战略 对抗中俄伊朗</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11793810.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NO79T-150x120.jpg" align ="left"></a>美国国务卿迈克?蓬佩奥（Mike Pompeo）周一（1月13日）在加州旧金山发表两个演说，分别提到美国恢复威懗战略对抗中共、俄罗斯及伊朗等敌对国家；另提醒硅谷高科技主管与中国做生意不要牺牲美国价值。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 9:44 AM							</td></tr>
@@ -24,15 +27,7 @@
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793171.md#1" target="_blank">美参议员呼吁抵制中共监狱奴工制品</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793171.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-912439212-150x120.jpg" align ="left"></a>美国国会参议员提醒消费者，抵制中共监狱生产的奴工产品，因为那是枪口下生产的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 1:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793134.md#1" target="_blank">中美签署协议前 北京加购美商品金额流出</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793134.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-104549089-150x120.jpg" align ="left"></a>在美中签署历史性贸易协议前夕，消息人士透露北京未来两年将向美国加购四大类别即工业产品、农产品、能源，以及服务等的金额。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 12:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11792728.md#1" target="_blank">德国病毒专家：武汉肺炎类似SARS病毒</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11792728.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_HKG2003122958048-600x400-1-150x120.jpg" align ="left"></a>据德新社报导，柏林夏利特医学院的病毒研究专家认为，中国武汉新出现的肺炎病原体是一种与2003年非典流感（SARS）病毒相似的冠状病毒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 11:37 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11791857.md#1" target="_blank">【翻墙必看】美中签协议 习访缅甸的背后</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11791857.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1172509081-600x400-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
-
-1.周晓辉：刘鹤赴美签协议 习近平为何突访缅甸？
-就在中共商务部1月9日宣布，国务院副总理刘鹤将于13日至15日访问华盛顿，与美方“签署第一阶段经贸协议”后的次日，中共外交部发布了习近平将于1月17日至18日对缅甸进行国事访问的消息，而这是习2020年的首次出访。
-
-2.香港监警会300页报告 列警方多个问题.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 9:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11791592.md#1" target="_blank">跟进辞中常委 蒋万安等人盼国民党彻底改革</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11791592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/7a6c5d3bcbc6ade36cf6df507e118c62-150x120.jpg" align ="left"></a>中华民国总统暨立委选举结果揭晓，民进党大胜，中国国民党掀起改革声浪，国民党立委蒋万安、江启臣、黄昭顺、沈智慧、杨琼璎都表达辞去国民党中常委一职，希望国民党能够彻底改革。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 9:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11794138.md#1" target="_blank">每日三退声明精选（2020/01/14）</a><br></h3>本人携妻声明退出上学时加入的共青团及少先队，并声明永不入党。本人及妻子上学时被要求强制加入少先队及共青团，后认识到共党乃是邪恶魔鬼，共产党统治下民不聊生，一切都被邪恶红龙夺走。本人携妻为曾经加入过的邪党团、队声明退出，从此与之势不两立，在黑暗统治下为争取自由而努力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 11:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793560.md#1" target="_blank">妻子被“潜规则” 男子起诉北影副校长</a><br></h3>1月14日，北京电影学院副校长孙立军“潜规则”李女士案件，在北京市海淀区法院进行不公开审理，但案件未当庭宣判。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 6:20 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11792705.md#1" target="_blank">世卫：武汉肺炎“有限度人传人” 疫情恐扩散</a><br></h3>1月14日，世界卫生组织（WHO）（简称“世卫”）表示，中国武汉肺炎疫情“2019新型冠状病毒”存在“有限度”人传人情况，主要是家人间的感染，而且有可能扩大蔓延。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 9:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11792580.md#1" target="_blank">杭州国企施工现场罐体发生爆裂 致3人死亡</a><br></h3>今天（1月14日），中共当局国有企业、杭州市环境集团餐厨二期项目施工现场发生爆裂，导致3人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 8:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/qdbzyr225/djy/blob/master/gb/nsc413_3.md#1<br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qdbzyr225/djy/blob/master/gb/nsc413_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_3.htm">http://www.epochtimes.com/gb/nsc413_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
